@@ -19,6 +19,8 @@ MISC:
    /usr/doc/wendzelnntpd-$ver/docs inaccessible (+x permission was
    missing)
  - Shifted manpages to docs/
+ - Prevent usernames with non-alphanumeric characters and newsgroups
+   with non-alphanumeric/./- letters.
 
 2.1.3-stable "Friedrichroda" : 17-Apr-2021:
  As usual, every new release gets named after a nice travel location.
